Add a badge to show unresolved comments count
Instead of finding out I have unresolved comments only when submitting,
the badge will tell that with a glance,
the badge will be shown next to comment threads tab title

when no unresolved comments, the badge will be hidden

screenshot: https://imgur.com/a/IVrMJ8h
Change-Id: Ieb6ca0c4ed0cadf865dba8e71470c3162dcd924e

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -292,6 +292,17 @@ limitations under the License.
           padding-right: 0;
         }
       }
+      .badge {
+        font-size: var(--font-size-small);
+        padding: 0 var(--spacing-s);
+        border-radius: var(--border-radius);
+        display: inline-block;
+        text-align: center;
+      }
+      .unresolvedCommentBadge {
+        vertical-align: text-top;
+        background-color: var(--unresolved-comment-background-color);
+      }
       /* NOTE: If you update this breakpoint, also update the
       BREAKPOINT_RELATED_SMALL in the JS */
       @media screen and (max-width: 50em) {
@@ -659,7 +670,11 @@ limitations under the License.
           <gr-tooltip-content
               has-tooltip
               title$="[[_computeTotalCommentCounts(_change.unresolved_comment_count, _changeComments)]]">
-            <span>Comment Threads</span></gr-tooltip-content>
+            <span>Comment Threads</span>
+            <span class="badge unresolvedCommentBadge" hidden$="[[!_change.unresolved_comment_count]]">
+              [[_change.unresolved_comment_count]]
+            </span>
+          </gr-tooltip-content>
         </paper-tab>
       </paper-tabs>
       <section class="changeLog">
