--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -725,26 +725,28 @@ limitations under the License.
 
       test('tab switch works correctly', done => {
         assert.isTrue(element._paramsChanged.called);
+        assert.equal(element.$.commentTabs.selected, CommentTabs.CHANGE_LOG);
+        assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
 
-        // Wait for tab to get selected
+        const commentTab = element.shadowRoot.querySelector(
+            'paper-tab.commentThreads'
+        );
+        // Switch to comment thread tab
+        MockInteractions.tap(commentTab);
+        flushAsynchronousOperations();
+        const commentTabs = element.$.commentTabs;
+        assert.equal(commentTabs.selected,
+            CommentTabs.COMMENT_THREADS);
+        assert.equal(element._currentView, CommentTabs.COMMENT_THREADS);
+
+        // Switch back to 'Change Log' tab
+        element._paramsChanged(element.params);
+        flushAsynchronousOperations();
         flush(() => {
-          assert.equal(element.$.commentTabs.selected, CommentTabs.CHANGE_LOG);
+          assert.equal(commentTabs.selected,
+              CommentTabs.CHANGE_LOG);
           assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
-
-          // Switch to comment thread tab
-          MockInteractions.tap(element.$$('paper-tab.commentThreads'));
-          assert.equal(element.$.commentTabs.selected,
-              CommentTabs.COMMENT_THREADS);
-          assert.equal(element._currentView, CommentTabs.COMMENT_THREADS);
-
-          // Switch back to 'Change Log' tab
-          element._paramsChanged(element.params);
-          flush(() => {
-            assert.equal(element.$.commentTabs.selected,
-                CommentTabs.CHANGE_LOG);
-            assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
-            done();
-          });
+          done();
         });
       });
     });
@@ -793,6 +795,7 @@ limitations under the License.
         assert.equal(element._robotCommentThreads[1].comments[0].robot_id,
             'rc2');
       });
+
       test('changing patchsets resets robot comments', done => {
         element.set('_change.current_revision', 'rev3');
         flush(() => {
@@ -830,6 +833,48 @@ limitations under the License.
             assert.equal(element._robotCommentThreads.length, 62);
             done();
           });
+        });
+      });
+    });
+
+    suite('Comment threads tab', () => {
+      setup(done => {
+        element._change = {
+          change_id: 'Iad9dc96274af6946f3632be53b106ef80f7ba6ca',
+          unresolved_comment_count: 1,
+          revisions: {
+            rev1: {_number: 1, commit: {parents: []}},
+          },
+          current_revision: 'rev1',
+        };
+        const paperTabs = element.shadowRoot.querySelector('#commentTabs');
+        MockInteractions.tap(paperTabs.querySelectorAll('paper-tab')[1]);
+        flush(() => {
+          done();
+        });
+      });
+
+      test('unresolved badge should show if has unresolved', () => {
+        const badgeEl = element.shadowRoot.querySelector(
+            '.unresolvedCommentBadge'
+        );
+        assert.isTrue(!!badgeEl);
+        assert.equal(badgeEl.hidden, false);
+        assert.equal(badgeEl.textContent, 1);
+      });
+
+      test('unresolved badge should not show if no unresolved', done => {
+        element._change = Object.assign({}, element._change, {
+          unresolved_comment_count: 0,
+        });
+        flush(() => {
+          const badgeEl = element.shadowRoot.querySelector(
+              '.unresolvedCommentBadge'
+          );
+          assert.isTrue(!!badgeEl);
+          assert.equal(badgeEl.hidden, true);
+          assert.equal(badgeEl.textContent, 0);
+          done();
         });
       });
     });
@@ -2191,7 +2236,9 @@ limitations under the License.
       const stub = sandbox.stub(element, '_handleToggleStar');
       flushAsynchronousOperations();
 
-      MockInteractions.tap(element.$.changeStar.$$('button'));
+      const starBtn = element.$.changeStar
+          .shadowRoot.querySelector('button');
+      MockInteractions.tap(starBtn);
       assert.isTrue(stub.called);
     });
 
