--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -723,28 +723,28 @@ limitations under the License.
         element.params = {view: 'change', changeNum: '1'};
       });
 
-      test('tab switch works correctly', done => {
+      test.only('tab switch works correctly', done => {
         assert.isTrue(element._paramsChanged.called);
+        assert.equal(element.$.commentTabs.selected, CommentTabs.CHANGE_LOG);
+        assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
 
-        // Wait for tab to get selected
+        const commentTab = element.shadowRoot.querySelector(
+            'paper-tab.commentThreads'
+        );
+        // Switch to comment thread tab
+        MockInteractions.tap(commentTab);
+        const commentTabs = element.$.commentTabs;
+        assert.equal(commentTabs.selected,
+            CommentTabs.COMMENT_THREADS);
+        assert.equal(element._currentView, CommentTabs.COMMENT_THREADS);
+
+        // Switch back to 'Change Log' tab
+        element._paramsChanged(element.params);
         flush(() => {
-          assert.equal(element.$.commentTabs.selected, CommentTabs.CHANGE_LOG);
+          assert.equal(commentTabs.selected,
+              CommentTabs.CHANGE_LOG);
           assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
-
-          // Switch to comment thread tab
-          MockInteractions.tap(element.$$('paper-tab.commentThreads'));
-          assert.equal(element.$.commentTabs.selected,
-              CommentTabs.COMMENT_THREADS);
-          assert.equal(element._currentView, CommentTabs.COMMENT_THREADS);
-
-          // Switch back to 'Change Log' tab
-          element._paramsChanged(element.params);
-          flush(() => {
-            assert.equal(element.$.commentTabs.selected,
-                CommentTabs.CHANGE_LOG);
-            assert.equal(element._currentView, CommentTabs.CHANGE_LOG);
-            done();
-          });
+          done();
         });
       });
     });
@@ -793,6 +793,7 @@ limitations under the License.
         assert.equal(element._robotCommentThreads[1].comments[0].robot_id,
             'rc2');
       });
+
       test('changing patchsets resets robot comments', done => {
         element.set('_change.current_revision', 'rev3');
         flush(() => {
@@ -2191,7 +2192,9 @@ limitations under the License.
       const stub = sandbox.stub(element, '_handleToggleStar');
       flushAsynchronousOperations();
 
-      MockInteractions.tap(element.$.changeStar.$$('button'));
+      const starBtn = element.$.changeStar
+          .shadowRoot.querySelector('button');
+      MockInteractions.tap(starBtn);
       assert.isTrue(stub.called);
     });
 
