Support loading on promise for gr-button
currently gr-button supports `loading` but did not use it
(neither core nor plugins I can find).

1. add support to pass in a promise
and use that update the loading status
2. use disabled status when loading
3. add a spinner to show until promise resolved
4. use the promise for gr-repo-access to show the indicator when saving

also fix the issue with non-zero initial tabindex

screenshot: https://imgur.com/a/NCLwb45

Bug: 12421
Change-Id: Ie69c447455d23a118dbe1823c576144e0bca7c2d

--- a/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
+++ b/polygerrit-ui/app/elements/shared/gr-button/gr-button.html
@@ -137,7 +137,7 @@ limitations under the License.
 
       /* Keep below color definition for primary so that this takes precedence
         when disabled. */
-      :host([disabled]) {
+      :host([disabled]), :host([loading]) {
         --background-color: var(--disabled-button-background-color);
         --text-color: var(--deemphasized-text-color);
         cursor: default;
@@ -149,7 +149,8 @@ limitations under the License.
         --margin: 0;
         --padding: 5px 4px;
       }
-      :host([disabled][link]) {
+      :host([disabled][link]),
+      :host([loading][link]) {
         --background-color: transparent;
         --text-color: var(--deemphasized-text-color);
         cursor: default;
@@ -170,11 +171,29 @@ limitations under the License.
       :host([down-arrow]) paper-button:hover .downArrow {
         border-top-color: var(--deemphasized-text-color);
       }
+
+      i.loadingSpin {
+        border: 2px solid var(--disabled-button-background-color);
+        border-top: 2px solid var(--primary-button-background-color);
+        border-radius: 50%;
+        width: 10px;
+        height: 10px;
+        animation: spin 2s linear infinite;
+        margin-right: var(--spacing-s);
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     </style>
     <paper-button
         raised="[[!link]]"
-        disabled="[[_computeDisabled(disabled, loading)]]"
+        disabled="[[_disabled]]"
         tabindex="-1">
+      <template is="dom-if" if="[[loading]]">
+        <i class="loadingSpin"></i>
+      </template>
       <slot></slot>
       <i class="downArrow"></i>
     </paper-button>
