--- a/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access.html
+++ b/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access.html
@@ -105,12 +105,14 @@ limitations under the License.
             primary
             class$="[[_computeSaveBtnClass(_ownerOf)]]"
             on-click="_handleSave"
-            disabled$="[[!_modified]]">Save</gr-button>
+            promise="[[_savePromise]]"
+            disabled="[[!_modified]]">Save</gr-button>
         <gr-button id="saveReviewBtn"
             primary
             class$="[[_computeSaveReviewBtnClass(_canUpload)]]"
+            promise="[[_saveForReviewPromise]]"
             on-click="_handleSaveForReview"
-            disabled$="[[!_modified]]">Save for review</gr-button>
+            disabled="[[!_modified]]">Save for review</gr-button>
         <template
             is="dom-repeat"
             items="{{_sections}}"
