--- a/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access_test.html
+++ b/polygerrit-ui/app/elements/admin/gr-repo-access/gr-repo-access_test.html
@@ -1127,6 +1127,50 @@ limitations under the License.
         assert.equal(Object.keys(element._local).length, 1);
       });
 
+      test('_handleSave', done => {
+        const repoAccessInput = {
+          add: {
+            'refs/*': {
+              permissions: {
+                owner: {
+                  rules: {
+                    123: {action: 'DENY', modified: true},
+                  },
+                },
+              },
+            },
+          },
+          remove: {
+            'refs/*': {
+              permissions: {
+                owner: {
+                  rules: {
+                    123: {},
+                  },
+                },
+              },
+            },
+          },
+        };
+        sandbox.stub(element.$.restAPI, 'getRepoAccessRights').returns(
+            Promise.resolve(JSON.parse(JSON.stringify(accessRes))));
+        sandbox.stub(Gerrit.Nav, 'navigateToChange');
+        const saveStub = sandbox.stub(element.$.restAPI,
+            'setRepoAccessRights')
+            .returns(Promise.resolve({_number: 1}));
+
+        element.repo = 'test-repo';
+        sandbox.stub(element, '_computeAddAndRemove').returns(repoAccessInput);
+
+        const saveProimise = element._handleSave();
+        assert.equal(element.$.saveBtn.hasAttribute('loading'), true);
+        saveProimise.then(() => {
+          assert.isTrue(saveStub.called);
+          assert.isTrue(Gerrit.Nav.navigateToChange.notCalled);
+          done();
+        });
+      });
+
       test('_handleSaveForReview', done => {
         const repoAccessInput = {
           add: {
@@ -1162,7 +1206,9 @@ limitations under the License.
         element.repo = 'test-repo';
         sandbox.stub(element, '_computeAddAndRemove').returns(repoAccessInput);
 
-        element._handleSaveForReview().then(() => {
+        const saveForReviewProimise = element._handleSaveForReview();
+        assert.equal(element.$.saveReviewBtn.hasAttribute('loading'), true);
+        saveForReviewProimise.then(() => {
           assert.isTrue(saveForReviewStub.called);
           assert.isTrue(Gerrit.Nav.navigateToChange
               .lastCall.calledWithExactly({_number: 1}));
